# ngc

./: .gitignore  .gitmodules  1001.ngc  1002_3d.ngc  AGENTS.md  ARC_ENDPOINT_CONTINUITY_HANDOFF.md  CMakeLists.txt  CODE_AUDIT.md  G64_EXECUTION_REGRESSION_FINDINGS.md  SPLINE_CURVATURE_DERIVATIVE_VELOCITY_CAP.md  adaptive.ngc  adaptive_pockets.ngc  bounded_polyline_curve_reconstruction_research_2026-07-16.md  cnc_trajectory_planning_architecture.md  decoupled_geometry_and_trajectory_planning_2026-07-17.md  g64_blend_scale_test.ngc  g64_dense_timing_test.ngc  gcode.py  jerk_limited_feedrate_scheduling_research_2026-07-19.md  machine.toml  main.cpp  mcode.py  real_tool_table.txt  scp_planner_followup_2026-07-19.md  scp_planner_review_2026-07-19.md  scp_planner_review_response_2026-07-19.md  simulation_tool_table.txt  test.ngc  test2.ngc  tool_table.txt  trajectory_planning_research_2026-07-16.md  two_arc_quintic_blend.ngc
.cache/clangd/index/: CharacterSource.h.4F4C5CC63B52FB18.idx  Evaluator.h.408CF1115A68FD8A.idx  Expression.h.62627915ADD52EFB.idx  Lexer.h.7A706EA39D50C4AD.idx  Memory.h.912CC2DD617120EB.idx  MemoryCell.h.1E6CA3AE3CBF5406.idx  Parser.h.28DA27A26D518237.idx  Preamble.h.55C2EEC742C9FAA8.idx  Program.h.B347584D65545B9A.idx  SemanticAnalyzer.h.26DDA120B49A227A.idx  Statement.h.B328907ECCF49024.idx  Token.h.DE6A5FF6A8466413.idx  Utils.h.0F48488A5158FA12.idx  Vars.h.0CD9759F9B052B48.idx  Visitor.h.2BAE47DC4BCD1EF9.idx  VisitorContext.h.C2E7CC9A48A3883A.idx  main.cpp.CEDBAA43ACA1E741.idx
autoload/: hello.ngc  tool_change.ngc  world.ngc
docs/: cpp_style.md  feed_hold_plan.md  g64_geometry_text_format.md  machine_session_backend_architecture.md  pendant_protocol.md  prepared_trajectory_test_backlog.md  quintic_materialization_branch_status.md  temporary_quintic_correction_investigation.md  vistacnc_p2s_protocol.md
include/: CharacterSource.h  Evaluator.h  Expression.h  FirstPass.h  GCode.h  Lexer.h  LexerSource.h  Memory.h  MemoryCell.h  Parser.h  Preamble.h  Program.h  SemanticAnalyzer.h  Statement.h  StringTokenSource.h  StringViewTokenSource.h  SubSignature.h  Token.h  TokenSource.h  Utils.h  Vars.h  Visitor.h  VisitorContext.h
modules/: Machine.cppm  Utils.cppm
modules/evaluator/: Evaluator.cppm  Preamble.cppm  Program.cppm
modules/gcode/: GCode.cppm  gcode.gen.h  mcode.gen.h
modules/machine/: Machine.cppm  MachineCommand.cppm  ToolTable.cppm
modules/memory/: Memory.cppm  MemoryCell.cppm  Vars.cppm
modules/parser/: Expression.cppm  Lexer.cppm  LexerSource.cppm  Parser.cppm  Statement.cppm  StringTokenSource.cppm  StringViewTokenSource.cppm  SubSignature.cppm  Token.cppm  TokenSource.cppm  Visitor.cppm
src/: Application.cpp  Application.h  ArcInterpolation.cpp  Evaluator.cpp  ExactStopTrajectoryPlanner.cpp  InProcessSimulationRuntime.cpp  InfiniteJerkTrajectoryTime.cpp  Machine.cpp  MachineConfiguration.cpp  MockMotionBackend.cpp  ParameterStore.cpp  PreparedGeometry.cpp  PresentationTracker.cpp  PreviewSpline.h  SimulationExecutor.cpp  SimulationWorker.h  SplineReconstruction.cpp  ToolTable.cpp  TrajectoryCompiler.cpp  WindowsServoPacer.h  Worker.h  imgui_main.cpp  test.cpp
src/gui/: imgui_custom.h
src/include/: utils.h
src/include/evaluator/: Evaluator.h  InterpreterSession.h  InterpreterStatus.h  Preamble.h
src/include/gcode/: GCode.h  GCodeStateDifference.h  gcode.gen.h
src/include/gui/: tool_table_strings_t.h
src/include/machine/: ArcInterpolation.h  BoundedLookaheadTrajectoryPlanner.h  ExactStopTrajectoryPlanner.h  ExecutionDriver.h  GeometryStreamProducer.h  InProcessSimulationRuntime.h  InfiniteJerkTrajectoryTime.h  Machine.h  MachineCommand.h  MachineConfiguration.h  MockMotionBackend.h  MockTrajectoryDiagnostics.h  MotionBackend.h  OwningSpscChannel.h  PreparedGeometry.h  PreparedTrajectoryExecutionDriver.h  PresentationTracker.h  SimulationExecutor.h  SimulationPresentation.h  SplineHandleOptimization.h  SplineReconstruction.h  SpscChannel.h  ToolTable.h  ToolpathRecorder.h  TrajectoryCompiler.h  TrajectoryExecutionDriver.h  TrajectoryPlanner.h
src/include/memory/: Memory.h  MemoryCell.h  ParameterStore.h  Vars.h
src/include/operator/: OperatorJogController.h  PendantTouchOffController.h
src/include/parser/: Expression.h  Lexer.h  LexerSource.h  Parser.h  Program.h  Statement.h  StringTokenSource.h  StringViewTokenSource.h  SubSignature.h  Token.h  TokenSource.h  Visitor.h
src/include/pendant/: HidTransport.h  PendantIntent.h  VistaCncP2sDisplay.h  VistaCncP2sDriver.h  VistaCncP2sManager.h  VistaCncP2sProfile.h  VistaCncP2sProtocol.h
src/modules/: Utils.cppm
src/operator/: OperatorJogController.cpp  PendantTouchOffController.cpp  test.cpp
src/pendant/: CMakeLists.txt  VistaCncP2sDisplay.cpp  VistaCncP2sDriver.cpp  VistaCncP2sManager.cpp  VistaCncP2sProfile.cpp  VistaCncP2sProtocol.cpp  test.cpp
src/pendant/platform/: UnsupportedHidTransport.cpp  WindowsHidTransport.cpp
tools/: ngc_g64_geometry_export.cpp  ngc_g64_oracle_export.cpp  ngc_quintic_spline_analyzer.cpp  ngc_simulation_diagnostic.cpp  ngc_spline_geometry_analyzer.cpp  pendant_probe.cpp  plot_quintic_failures.py  plot_quintic_shadow.py  vistacnc_p2s_probe.cpp
tools/clarabel_trajectory_oracle/: Cargo.toml  README.md
tools/clarabel_trajectory_oracle/src/: main.rs
tools/testdata/: spline_geometry_analyzer_snapshot.txt
